--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -29,28 +29,28 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v4
 
-      - name: Set up Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: "1.23"
+      # - name: Set up Go
+      #   uses: actions/setup-go@v5
+      #   with:
+      #     go-version: "1.23"
 
-      - name: Install dependencies
-        run: go mod tidy
+      # - name: Install dependencies
+      #   run: go mod tidy
 
-      # TODO: build binaries
-      - name: Build
-        run: go build -v ./...
+      # # TODO: build binaries
+      # - name: Build
+      #   run: go build -v ./...
 
-      - name: Run malware scan
-        uses: dell/common-github-actions/malware-scanner@main
-        with:
-          directories: .
-          options: -ri
+      # - name: Run malware scan
+      #   uses: dell/common-github-actions/malware-scanner@main
+      #   with:
+      #     directories: .
+      #     options: -ri
 
-      - name: Run gosec
-        uses: dell/common-github-actions/gosec-runner@main
-        with:
-          directories: "./..."
+      # - name: Run gosec
+      #   uses: dell/common-github-actions/gosec-runner@main
+      #   with:
+      #     directories: "./..."
 
       # TODO: run gofmt, go vet, and linting
 
@@ -62,69 +62,69 @@ jobs:
       - name: Log in to Quay.io
         run: echo "${{ secrets.QUAY_PASSWORD }}" | docker login quay.io -u "${{ secrets.QUAY_USERNAME }}" --password-stdin
 
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login docker.io -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+  #     - name: Log in to Docker Hub
+  #       run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login docker.io -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Pull nightly image from Quay.io
-        run: docker pull quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly
+  #     - name: Pull nightly image from Quay.io
+  #       run: docker pull quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly
 
-      - name: Retag image for Quay.io
-        run: |
-          docker tag quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:v${{ github.event.inputs.version }}
+  #     - name: Retag image for Quay.io
+  #       run: |
+  #         docker tag quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:v${{ github.event.inputs.version }}
 
-          docker tag quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:latest
+  #         docker tag quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:latest
 
-      - name: Retag image for Docker Hub
-        run: |
-          docker tag quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly dellemc/${{ github.event.inputs.image }}:v${{ github.event.inputs.version }}
+  #     - name: Retag image for Docker Hub
+  #       run: |
+  #         docker tag quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly dellemc/${{ github.event.inputs.image }}:v${{ github.event.inputs.version }}
 
-          docker tag quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly dellemc/${{ github.event.inputs.image }}:latest
+  #         docker tag quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly dellemc/${{ github.event.inputs.image }}:latest
 
-      - name: Push ${{ github.event.inputs.version }} and latest tag to Quay.io
-        run: |
-          docker push quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:v${{ github.event.inputs.version }}
-          docker push quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:latest
+  #     - name: Push ${{ github.event.inputs.version }} and latest tag to Quay.io
+  #       run: |
+  #         docker push quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:v${{ github.event.inputs.version }}
+  #         docker push quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:latest
 
-      - name: Push ${{ github.event.inputs.version }} and latest tag to Docker Hub
-        run: |
-          docker push dellemc/${{ github.event.inputs.image }}:v${{ github.event.inputs.version }}
-          docker push dellemc/${{ github.event.inputs.image }}:latest
+  #     - name: Push ${{ github.event.inputs.version }} and latest tag to Docker Hub
+  #       run: |
+  #         docker push dellemc/${{ github.event.inputs.image }}:v${{ github.event.inputs.version }}
+  #         docker push dellemc/${{ github.event.inputs.image }}:latest
 
-  create-release:
-    name: Create Release
-    needs: push-images
-    runs-on: ubuntu-latest
-    steps:
-      - name: Create new tag
-        run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
-          git tag v${{ github.event.inputs.version }}
-          git push origin v${{ github.event.inputs.version }}
+  # create-release:
+  #   name: Create Release
+  #   needs: push-images
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Create new tag
+  #       run: |
+  #         git config --global user.name 'github-actions'
+  #         git config --global user.email 'github-actions@github.com'
+  #         git tag v${{ github.event.inputs.version }}
+  #         git push origin v${{ github.event.inputs.version }}
 
-      # TODO: attach built binaries to the release
-      - name: Create Release
-        id: release_notes
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: v${{ github.event.inputs.version }}
-          name: Release v${{ github.event.inputs.version }}
-          draft: true
-          prerelease: false
-          generate_release_notes: true
-          make_latest: true
-          body: |
-            ## Documentation
-            [General Documentation](https://dell.github.io/csm-docs/docs/)
+  #     # TODO: attach built binaries to the release
+  #     - name: Create Release
+  #       id: release_notes
+  #       uses: softprops/action-gh-release@v2
+  #       with:
+  #         tag_name: v${{ github.event.inputs.version }}
+  #         name: Release v${{ github.event.inputs.version }}
+  #         draft: true
+  #         prerelease: false
+  #         generate_release_notes: true
+  #         make_latest: true
+  #         body: |
+  #           ## Documentation
+  #           [General Documentation](https://dell.github.io/csm-docs/docs/)
 
-            ### Change Log
-            See the [CHANGELOG](https://github.com/dell/csm/blob/release-v1.12.0/CHANGELOG/CHANGELOG-1.12.0.md) for more details.
-        env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #           ### Change Log
+  #           See the [CHANGELOG](https://github.com/dell/csm/blob/release-v1.12.0/CHANGELOG/CHANGELOG-1.12.0.md) for more details.
+  #       env:
+  #           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create release branch
-        run: |
-          git config --global user.name 'github-actions'
-          git config --global user.email 'github-actions@github.com'
-          git checkout -b release/v${{ github.event.inputs.version }}
-          git push origin release/v${{ github.event.inputs.version }}
+  #     - name: Create release branch
+  #       run: |
+  #         git config --global user.name 'github-actions'
+  #         git config --global user.email 'github-actions@github.com'
+  #         git checkout -b release/v${{ github.event.inputs.version }}
+  #         git push origin release/v${{ github.event.inputs.version }}
