--- a/.github/workflows/csm-release-driver-module.yaml
+++ b/.github/workflows/csm-release-driver-module.yaml
@@ -59,11 +59,11 @@ jobs:
     needs: build-and-scan
     runs-on: ubuntu-latest
     steps:
-      - name: Log in to Quay.io
-        run: echo ${{ secrets.QUAY_PASSWORD }}
+      # - name: Log in to Quay.io
+      #   run: echo ${{ secrets.QUAY_PASSWORD }}
 
-  #     - name: Log in to Docker Hub
-  #       run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login docker.io -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+      - name: Log in to Docker Hub
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
 
   #     - name: Pull nightly image from Quay.io
   #       run: docker pull quay.io/dell/container-storage-modules/${{ github.event.inputs.image }}:nightly
