--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -49,7 +49,7 @@ jobs:
       - name: Set up GPG
         run: |
           echo "$GPG_PRIVATE_KEY" | gpg --import
-          gpg --batch --yes --edit-key git@github-actions.com trust quit
+          echo -e "trust\n4\ny\nsave\n" | gpg --batch --yes --command-fd 0 --edit-key git@github-actions.com
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
       
