--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -46,17 +46,15 @@ jobs:
       #   with:
       #     directories: .
       #     options: -ri
-      # - name: Set up GPG
-      #   run: |
-      #     echo "$GPG_PRIVATE_KEY" | gpg --import
-      #     echo -e "trust\n4\ny\nsave\n" | gpg --batch --yes --command-fd 0 --edit-key git@github-actions.com
-      #   env:
-      #     GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-
-      - name: Create new tag
+      - name: Set up GPG
         run: |
           echo "$GPG_PRIVATE_KEY" | gpg --import
           echo -e "trust\n4\ny\nsave\n" | gpg --batch --yes --command-fd 0 --edit-key git@github-actions.com
+        env:
+          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+
+      - name: Create new tag
+        run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'git@github-actions.com'
           git config --global user.signingkey ${{ secrets.GPG_KEY_ID }}
@@ -65,7 +63,7 @@ jobs:
           git push origin v${{ github.event.inputs.version }}
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-          
+
       - name: Create Release
         id: release_notes
         uses: softprops/action-gh-release@v2
