--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -66,7 +66,7 @@ jobs:
           # git config --global user.email 'git@github-actions.com'
           # git config --global user.signingkey ${{ secrets.GPG_KEY_ID }}
           # git config --global commit.gpgSign true
-          git tag -S -a v${{ github.event.inputs.version }} -m "Release v${{ github.event.inputs.version }}"
+          git tag -s -a v${{ github.event.inputs.version }} -m "Release v${{ github.event.inputs.version }}"
           git push origin v${{ github.event.inputs.version }}
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
