--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -58,14 +58,14 @@ jobs:
         with:
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
           git_user_signingkey: true
-          git_commit_gpgsign: true          
+          git_commit_gpgsign: true
+          git_tag_gpgsign: true
+          git_config_global: true
   
       - name: Create new tag
         run: |
           git config --global user.name 'github-actions'
           git config --global user.email 'git@github-actions.com'
-          git config --global user.signingkey ${{ secrets.GPG_KEY_ID }}
-          git config --global commit.gpgSign true
           git tag -s -a v${{ github.event.inputs.version }} -m "Release v${{ github.event.inputs.version }}"
           git push origin v${{ github.event.inputs.version }}
         env:
