--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -46,3 +46,5 @@ jobs:
           options: -ri
       - name : Create Tag and Release
         uses: harishp8889/test-common-github-actions/.github/workflows/tag-creator.yaml@main
+        with:
+          inputs: ${{ inputs.version}}
