--- a/.github/workflows/csm-release-libs.yaml
+++ b/.github/workflows/csm-release-libs.yaml
@@ -45,6 +45,6 @@ jobs:
           directories: .
           options: -ri
       - name : Create Tag and Release
-        uses: harishp8889/test-common-github-actions/.github/workflows/tag-creator.yaml@main
+        uses: harishp8889/test-common-github-actions/.github/tag-creator.yaml
         with:
           inputs: ${{ inputs.version}}
