--- a/.github/workflows/license-checker.yaml
+++ b/.github/workflows/license-checker.yaml
@@ -3,6 +3,15 @@ name: Weekly License Header Check
 on:
   workflow_call:
   workflow_dispatch:
+    inputs:
+      autofix:
+        description: "Autofix mode"
+        required: false
+        type: string
+      file-exclusions-list:
+        description: "Autofix mode"
+        required: false
+        type: string
 jobs:
   license-check:
     runs-on: ubuntu-latest
